LuckyStackWorker - RELEASE NOTES
================================
21/04/2023 major release 4.0.0-beta:
- Added new method for removal of the edge ring artefact happening on planet surfaces.
- Added new sliders to control local contrast on fine, medium and large details
- Splitted up the tabs in 3: Sharpen & Denoise, Contrast & Light, Color & Dispersion.
- Added a Dispersion Correction tool.
- Added ability to save individual images in 100% quality JPG format.

11/03/2023 revision release 3.1.1:
- Fixed broken 16-bit PNG file opening
- Fixed issues on MacOS with window focus and minimizing
- Fixed problem on MacOS when closing GUI the image window would not immediately close
- Reduced size of MacOS binary
- Fixed issue with crop size indicator showing when window is de-iconified

04/03/2023 minor release 3.1.0:
- First release of the mac version (both x64 and arm)
- Fixed bugs in file opening (folders with dots were causing problems)
- Fixed db file not overwritten when installing new version
- Fixed UI windown close icon not closing the backend of the app

31/01/2023 major release 3.0.0-beta:
- New options for sharpening (luminance only). Replaced sharpening algorithm with a faster custom build version.
- New sliders for supressing the edge clipping effect on Mars & Venus
- Revised denoise options, choice between Savitzky-Golay or Sigma filter. Replaced Sigma filter sigma slider with a choice between mode 1 or 2
- Added additional 129 & 169 kernel size options to the Savitzky-Golay filter
- Added realtime processing, useful to pick up files automatically as they are being outputted by stacking apps (e.g. Autostakkert)
- Full 16-bit support for Saturation slider through a custom build algorithm
- Replaced RGB balance filter with a faster custom build algorithm
- Better input validation, prevent non supported formats to be opened (non 16-bit image files)
- Close currently opened image stack if a new one is opened