@@ -11,7 +11,7 @@
 
 	<groupId>nl.wilcokas</groupId>
 	<artifactId>luckystackworker</artifactId>
-	<version>4.0.0-beta</version>
+	<version>4.0.1</version>
 	<name>LuckyStackWorker</name>
 	<description>LuckyStackWorker Application</description>
 
